--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <title>Gym World</title>
 </head>
 
-<body class="min-h-screen">
+<body>
+  <div id="modal"></div>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
