feat: created basic layout for hero and navbar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div id="modal"></div>
-  <div id="root"></div>
+  <div id="root" class="w-full h-full"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
