feat: popup menu

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <title>Gym World</title>
 </head>
 
-<body>
+<body class="overflow-x-hidden">
   <div id="modal"></div>
   <div id="root" class="w-full h-full"></div>
   <script type="module" src="/src/main.tsx"></script>
