feat: social proof section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <title>Gym World</title>
 </head>
 
-<body class="overflow-x-hidden">
+<body class="overflow-x-hidden bg-neutral-black-300">
   <div id="modal"></div>
   <div id="root" class="w-full h-full"></div>
   <script type="module" src="/src/main.tsx"></script>
