--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
   <meta name="description" content="Welcome to Gym World, the arena that will help you build your dream body!">
+  <meta property="og:title" content="Gym World" />
+  <meta property="og:description" content="Welcome to Gym World, the arena that will help you build your dream body!" />
+  <meta property="og:image" content="https://gymworld-production.up.railway.app/logox630x630.svg" />
+  <meta property="og:url" content="https://gymworld-production.up.railway.app/" />
+  <meta property="og:type" content="website" />
   <title>Gym World</title>
 </head>
 
