--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="preload" as="image"
+    href="https://res.cloudinary.com/dopxg7h3m/image/upload/f_auto,q_auto/v1755638051/gym_world/hero_u5cral.png"
+    fetchpriority="high">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Welcome to Gym World, the arena that will help you build your dream body!">
   <meta property="og:title" content="Gym World" />
   <meta property="og:description" content="Welcome to Gym World, the arena that will help you build your dream body!" />
@@ -22,7 +25,7 @@
 <body class="overflow-x-hidden bg-neutral-black-300">
   <div id="modal"></div>
   <div id="root" class="w-full h-full"></div>
-  <script type="module" src="/src/main.tsx"></script>
+  <script type="module" src="/src/main.tsx" defer></script>
 </body>
 
 </html>
